...
    ) {
        Column(modifier = Modifier.padding(20.dp)) {
            PrimaryTextField(
                value = state.firstName,
                label = stringResource(R.string.complete_profile_field_first_name),
                onValueChange = { onAction(CompleteProfileAction.FirstNameChanged(it)) },
                testTag = "first-name",
                keyboardOptions = nextFieldKeyboardOptions,
                keyboardActions = nextFieldKeyboardActions,
            )

            Spacer(modifier = Modifier.height(12.dp))

            PrimaryTextField(
                value = state.lastName,
                label = stringResource(R.string.complete_profile_field_last_name),
                onValueChange = { onAction(CompleteProfileAction.LastNameChanged(it)) },
                testTag = "last-name",
                keyboardOptions = nextFieldKeyboardOptions,
                keyboardActions = nextFieldKeyboardActions,
            )

            Spacer(modifier = Modifier.height(12.dp))

...
